--- a/contactos.html
+++ b/contactos.html
@@ -1,55 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="Index.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Mandali:wght@400&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Marcellus:wght@400&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Mako:wght@400&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Marck Script:wght@400&display=swap"
-    />
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mandali:wght@400&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Marcellus:wght@400&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mako:wght@400&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Marck Script:wght@400&display=swap" />
+</head>
+<body>
     <div class="contactos">
-      <header>
-        <img src="public/dream-nails-5-2@2x.png" alt="Dream Nails Logo" class="logo">
-        <nav>
-            <a href="index.html" class="active">Inicio</a>
-            <a href="contactos.html">Contacto</a>
-            <a href="quienes-somos.html">¿Quienes somos?</a>
-            <a href="inspirate.html">Inspírate</a>
-            <a href="servicios.html">Servicios</a>
-        </nav>
-        
-    </header>
-      <div class="hero-container">
-        <img class="hero" alt="" src="public/16396585-v722aum27a-1@2x.png" />
-        <div class="textt-overlay">
-          <div class="maain-text">
-            <h2>Nos pueden encontrar en:</h2>
-            <p>Location: Ingeniero Maschwitz, Escobar</p>
-            <p>Whatsapp: +54 91130740534</p>
-            <p>Tik tok: @Dream.nails.17</p>
-            <p>Instagram: @Dream.nails.17</p>
-          </div>
+        <header>
+            <img src="public/dream-nails-5-2@2x.png" alt="Dream Nails Logo" class="logo">
+            <nav>
+                <a href="index.html" class="active">Inicio</a>
+                <a href="contactos.html">Contacto</a>
+                <a href="quienes-somos.html">¿Quienes somos?</a>
+                <a href="inspirate.html">Inspírate</a>
+                <a href="servicios.html">Servicios</a>
+            </nav>
+        </header>
+        <div class="hero-container">
+            <img class="hero" alt="" src="public/16396585-v722aum27a-1@2x.png" />
+            <div class="text-overlay">
+                <div class="main-text">
+                    <h2>Nos pueden encontrar en:</h2>
+                    <p>Location: Ingeniero Maschwitz, Escobar</p>
+                    <p>Whatsapp: +54 91130740534</p>
+                    <p>Tik tok: @Dream.nails.17</p>
+                    <p>Instagram: @Dream.nails.17</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <p>¡Los esperamos para mimarlos un rato!</p>
+        </footer>
     </div>
-    <footer>
-        <p>¡Los esperamos para mimarlos un rato!</p>
-    </footer>
-            
-  </body>
+</body>
 </html>
