--- a/contactos.html
+++ b/contactos.html
@@ -15,11 +15,11 @@
         <header>
             <img src="public/dream-nails-5-2@2x.png" alt="Dream Nails Logo" class="logo">
             <nav>
-                <a href="index.html" class="active">Inicio</a>
-                <a href="contactos.html">Contacto</a>
-                <a href="quienes-somos.html">¿Quienes somos?</a>
-                <a href="inspirate.html">Inspírate</a>
-                <a href="servicios.html">Servicios</a>
+                <a href="index.html" class="active" target="_blank">Inicio</a>
+                <a href="contactos.html"target="_blank">Contacto</a>
+                <a href="quienes-somos.html"target="_blank">¿Quienes somos?</a>
+                <a href="inspirate.html"target="_blank">Inspírate</a>
+                <a href="servicios.html"target="_blank">Servicios</a>
             </nav>
         </header>
         <div class="hero-container">
