--- a/inspirate.html
+++ b/inspirate.html
@@ -10,11 +10,11 @@
     <header>
       <img src="public/dream-nails-5-2@2x.png" alt="Dream Nails Logo" class="logo">
       <nav>
-          <a href="index.html">Inicio</a>
-          <a href="contactos.html">Contacto</a>
-          <a href="quienes-somos.html">¿Quienes somos?</a>
-          <a href="inspirate.html">Inspírate</a>
-          <a href="servicios.html">Servicios</a>
+          <a href="index.html"target="_blank">Inicio</a>
+          <a href="contactos.html"target="_blank">Contacto</a>
+          <a href="quienes-somos.html"target="_blank">¿Quienes somos?</a>
+          <a href="inspirate.html"target="_blank">Inspírate</a>
+          <a href="servicios.html"target="_blank">Servicios</a>
       </nav>
     </header>
     <main>
