--- a/servicios.html
+++ b/servicios.html
@@ -14,7 +14,7 @@
           <a href="contactos.html"target="_blank">Contacto</a>
           <a href="quienes-somos.html"target="_blank">¿Quienes somos?</a>
           <a href="inspirate.html"target="_blank">Inspírate</a>
-          <a href="servicios.html"target="_blank"Servicios</a>
+          <a href="servicios.html"target="_blank">Servicios</a>
       </nav>
     </header>
     <main>
