--- a/servicios.html
+++ b/servicios.html
@@ -57,7 +57,7 @@
     </main>
     <footer>
       <p>¡Los esperamos para mimarlos un rato!</p>
-      <p>¡Algunos de los servicios se pueden convinar para mejores resultados!</p>
+      <p>¡Algunos de los servicios se pueden combinar para mejores resultados!</p>
     </footer>
   </body>
 </html>
